# wfrest

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakeLists_Headers.txt  Dockerfile  GNUmakefile  LICENSE  README.md  README_cn.md  build.sh  test.sh  test.txt  test1.txt  text.txt  todo.md  wfrest-config.cmake.in  xmake.lua
.github/workflows/: CI.yml  docker-image.yml  sync-gitee.yml
benchmark/: CMakeLists.txt  libhv_bench.cc  post.lua  wfrest_bench.cc
docker/ubuntu/: Dockerfile
docker/ubuntu_cn/: Dockerfile
docker/ubuntu_zh/: Dockerfile
docs/: aop.md  benchmark_results.md  blueprint.md  cached_static_files.md  compress.md  compute_handler.md  config.md  cookie.md  header.md  https.md  json.md  json_api.md  jsonnew.md  logger.md  mysql.md  param_in_path.md  post_form.md  proxy.md  query_param.md  redirect.md  redis.md  requirement.md  save_file.md  send_file.md  series_handler.md  server_push.md  serving_static_file.md  static_file_optimization.md  timer.md  upload_file.md  xmake.md
docs/cn/: aop.md  benchmark_results.md  blueprint.md  cached_static_files.md  compress.md  compute_handler.md  config.md  cookie.md  header.md  https.md  json.md  jsonnew.md  mysql.md  param_in_path.md  post_form.md  proxy.md  query_param.md  redirect.md  redis.md  requirement.md  save_file.md  (+8 more)
example/: 01_basic.cc  02_parameter.cc  02_parameter_path.cc  03_query_params.cc  04_post_form.cc  05_header.cc  06_file_read.cc  07_file_save.cc  07_file_write.cc  08_upload_file.cc  08_upload_single_file.cc  09_json.cc  10_built_in_json.cc  10_logger.cc  10_nlohmann_json.cc  11_compute_handler.cc  11_go_task.cc  12_series_interface.cc  13_compess_client.cc  13_compession.cc  13_compress_client.py  13_compress_test.py  14_blue_print.cc  15_serve_static_file.cc  16_cookie.cc  17_server_config.cc  18_aop.cc  18_global_aop.cc  19_https.cc  20_proxy.cc  21_mysql.cc  22_redis.cc  23_compute.cc  24_peer_ip_address.cc  24_test.cc  25_cn_url_client.cc  25_cn_url_server.cc  26_timer.cc  27_sse.cc  28_benchmark_static_files.cc  (+10 more)
example/14_blue_print/: admin.h  blog.cc
example/21_mysql/: 21_create_add_query.cc  21_db_json.cc  21_mysql_show_database.cc  21_show_db.cc  21_web_db.cc
example/html/: index.html
modules/: after_clean.lua  before_build.lua  on_install.lua
src/: AsyncFileLogger.cc  AsyncFileLogger.h  CMakeLists.txt  CallbackWrapper.h  Compress.cc  Compress.h  Global.cc  Global.h  GoTaskWrapper.h  HttpContent.cc  HttpContent.h  HttpDef.cc  HttpDef.h  HttpFile.cc  HttpFile.h  HttpMsg.cc  HttpMsg.h  HttpServer.cc  HttpServer.h  HttpServerBase.cc  HttpServerBase.h  HttpServerTask.cc  HttpServerTask.h  HttpTaskUtil.h  LogStream.cc  LogStream.h  Logger.cc  Logger.h  Macro.h  MultiPartParser.c  MultiPartParser.h  NetworkTask.h  PathUtil.cc  PathUtil.h  RouteTable.cc  RouteTable.h  Router.cc  Router.h  ServerBase.h  ServerTask.h  (+18 more)
src/base/: CMakeLists.txt  Compress.cc  Compress.h  Copyable.h  ErrorCode.cc  Json.cc  Json.h  Noncopyable.h  SysInfo.cc  Timestamp.h  base64.cc  xmake.lua
src/core/: AopUtil.h  Aspect.cc  Aspect.h  BluePrint.cc  BluePrint.h  BluePrint.inl  CMakeLists.txt  FileCache.cc  FileCache.h  HttpContent.cc  HttpContent.h  HttpCookie.cc  HttpCookie.h  HttpDef.cc  HttpFile.cc  HttpFile.h  HttpMsg.cc  HttpMsg.h  HttpServer.cc  HttpServer.h  HttpServerTask.cc  HttpServerTask.h  RouteTable.cc  RouteTable.h  Router.cc  Router.h  VerbHandler.h  xmake.lua
src/util/: CMakeLists.txt  CodeUtil.cc  CodeUtil.h  FileUtil.cc  FileUtil.h  MysqlUtil.cc  MysqlUtil.h  PathUtil.cc  StrUtil.cc  StrUtil.h  UriUtil.cc  UriUtil.h  xmake.lua
test/: BluePrint_unittest.cc  CMakeLists.txt  ClientUtil.h  Compress_unittest.cc  FileTestUtil.cc  FileTestUtil.h  FileUtil_unittest.cc  HttpContent_unittest.cc  HttpCookie_unittest.cc  HttpDef_unittest.cc  PathUtil_unittest.cc  RouteTableNode_test.cc  RouteTable_unittest.cc  Router_unittest.cc  StrUtil_unittest.cc  StringPiece_feature.cc  StringPiece_unittest.cc  TimeStamp_unittest.cc  base64_unittest.cc  multi_verb_test.cc  router_test.cc  xmake.lua
test/HttpServer/: blueprint_test.cc  cn_url_test.cc  compute_test.cc  compute_unittest.cc  file_test.cc  file_unittest.cc  json_test.cc  json_unittest.cc  nlohmann_json_test.cc  param_test.cc  proxy_test.cc  proxy_unittest.cc  send_form_test.cc  send_form_unittest.cc  send_test.cc  send_unittest.cc  static_test.cc  static_unittest.cc
test/Json/: iter_test.cc  json_arr_test.cc  json_obj_test.cc  json_test.cc
tests/: AsyncLogger_test.cc  CMakeLists.txt  StrUtil_test.cc  StringPiece_feature.cc  StringPiece_unittest.cc  logger_test.cc  logger_test01.cc  logger_test_01.cc  logger_test_02.cc  multi_part_test.cc  params_test.cc  params_test_02.cc  router_test.cc  string_piece_test.cc  strutil_split.cc  strutil_test.cc  strutil_trim.cc
tests/test/: CMakeLists.txt  logger_test.cc  multi_part_test.cc  router_test.cc
tests/unit_test/: CMakeLists.txt  Compress_unittest.cc  StrUtil_unittest.cc
unittest/: BluePrint_unittest.cc  CMakeLists.txt  HttpCookie_unittest.cc  PathUtil_unittest.cc  Router_unittest.cc  StrUtil_unittest.cc
wfrest/: Aop.h  AopUtil.h  Aspect.cc  Aspect.h  AsyncFileLogger.cc  AsyncFileLogger.h  BlockSeries.cc  BlockSeries.h  BluePrint.cc  BluePrint.h  BluePrint.inl  CMakeLists.txt  Compress.cc  Compress.h  ErrorCode.cc  ErrorCode.h  FileUtil.cc  FileUtil.h  HttpContent.cc  HttpContent.h  HttpCookie.cc  HttpCookie.h  HttpDef.cc  HttpDef.h  HttpFile.cc  HttpFile.h  HttpMsg.cc  HttpMsg.h  HttpServer.cc  HttpServer.h  HttpServerTask.cc  HttpServerTask.h  LogStream.cc  LogStream.h  Logger.cc  Logger.h  Macro.h  Mysql.cc  Mysql.h  MysqlUtil.cc  (+23 more)
wfrest/test/: AsyncLogger_test.cc  Body_Size.cc  CMakeLists.txt  RouteTableNode_test.cc  logger_test.cc  router_test.cc
wfrest/unittest/: BluePrint_unittest.cc  CMakeLists.txt  Compress_unittest.cc  HttpContent_unittest.cc  HttpCookie_unittest.cc  HttpDef_unittest.cc  RouteTable_unittest.cc  Router_unittest.cc  StrUtil_unittest.cc  StringPiece_unittest.cc  TimeStamp_unittest.cc
wfrest/unittest/HttpServer/: param_unittest.cc  send_unittest.cc
(+2 files in other folders)
